fix inaccuracies in channel listings API
